启用之前修改模型注释的用户注册

--- a/ApiServer/appsettings.json
+++ b/ApiServer/appsettings.json
@@ -12,7 +12,7 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Data Source=DESKTOP-EA0ERLU\\SQLEXPRESS;Initial Catalog=DMZ;Persist Security Info=True;User ID=sa;Password=root" },
+  "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
