--- a/ApiServer/appsettings.json
+++ b/ApiServer/appsettings.json
@@ -12,7 +12,7 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Data Source=DESKTOP-EA0ERLU\\SQLEXPRESS;Initial Catalog=DMZ;Persist Security Info=True;User ID=sa;Password=root" },
+  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb;User Id=postgres;Password=omega" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
