--- a/ApiServer/ApiServer.csproj
+++ b/ApiServer/ApiServer.csproj
@@ -40,6 +40,8 @@
     <Compile Include="Controllers\Design\ProductsController.cs" />
     <Compile Include="Controllers\Design\ProductSpecController.cs" />
     <Compile Include="Controllers\Design\SolutionController.cs" />
+    <Compile Include="Controllers\Design\TextureController.cs" />
+    <Compile Include="Controllers\Design\MapController.cs" />
     <Compile Include="Controllers\Design\StaticMeshController.cs" />
     <Compile Include="Controllers\Order\OrdersController.cs" />
   </ItemGroup>
