--- a/ApiServer/appsettings.json
+++ b/ApiServer/appsettings.json
@@ -12,7 +12,7 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
+  "ConnectionStrings": { "MainDb": "Server=localhost;Database=damaozhudb;User Id=postgres;Password=omega" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
