--- a/ApiServer/appsettings.Production.json
+++ b/ApiServer/appsettings.Production.json
@@ -2,7 +2,7 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Error",
       "Microsoft": "Information"
     },
     "Debug": {
@@ -16,7 +16,7 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
+  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb_dev;User Id=postgres;Password=omega" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
