--- a/ApiModel/ApiModel.csproj
+++ b/ApiModel/ApiModel.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Configurations>Debug;Release;Cloud-Dev</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
