基本完成权限管理,修复linux nlog路径问题

--- a/ApiServer/nlog.config
+++ b/ApiServer/nlog.config
@@ -3,18 +3,18 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="info"
-      internalLogFile="c:\temp\internal-nlog.txt">
+      internalLogFile="c:/temp/internal-nlog.txt">
 
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
 
   <targets>
-    <target name="errorFile" xsi:type="File" fileName="${basedir}\logs\${shortdate}.log"
+    <target name="errorFile" xsi:type="File" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate}|${uppercase:${level}}|${message} ${exception:format=tostring}"/>
-    <target name="debugFile" xsi:type="File" fileName="${basedir}\logs\debug\${shortdate}.log"
+    <target name="debugFile" xsi:type="File" fileName="${basedir}/logs/debug/${shortdate}.log"
             layout="${longdate}|${uppercase:${level}}|${message} ${exception:format=tostring}"/>
-    <target name="warnFile" xsi:type="File" fileName="${basedir}\logs\warn\${shortdate}.log"
+    <target name="warnFile" xsi:type="File" fileName="${basedir}/logs/warn/${shortdate}.log"
         layout="${longdate}|${uppercase:${level}}|${message} ${exception:format=tostring}"/>
   </targets>
 
