修改收藏api添加category支持

--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -20,5 +20,6 @@
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
-  "GuidMinLen": 8
+  "GuidMinLen": 8,
+  "MediaShareServer": "http://localhost/ApiShareServe"
 }
