--- a/ApiServer/appsettings.json
+++ b/ApiServer/appsettings.json
@@ -16,5 +16,6 @@
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
-  "GuidMinLen": 8
+  "GuidMinLen": 8,
+  "MediaShareServer": "http://localhost/ApiShareServe"
 }
