--- a/ApiServer/appsettings.Production.json
+++ b/ApiServer/appsettings.Production.json
@@ -16,9 +16,10 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb_dev;User Id=postgres;Password=omega" },
+  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb_tmp;User Id=postgres;Password=omega" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
-  "GuidMinLen": 8
+  "GuidMinLen": 8,
+  "MediaShareServer": "http://share.damaozhu.com.cn"
 }
