基本完成store转为 DI Service,待测试

--- a/ApiServer/ApiServer.csproj
+++ b/ApiServer/ApiServer.csproj
@@ -18,6 +18,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Stores\**" />
+    <Content Remove="Stores\**" />
+    <EmbeddedResource Remove="Stores\**" />
+    <None Remove="Stores\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\Common\CommonController.cs" />
+    <Compile Remove="Controllers\Common\ListableController.cs" />
     <Compile Remove="Data\EntityRepository.cs" />
     <Compile Remove="Data\IEntityRepository.cs" />
     <Compile Remove="Data\RepositoryDefines.cs" />
