--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -21,5 +21,6 @@
   "ServerId": 1,
   "GuidSalt": "",
   "GuidMinLen": 8,
-  "MediaShareServer": "http://localhost/ApiShareServe"
+  "MediaShareServer": "http://localhost/ApiShareServe",
+  "Demo": "1111"
 }
