添加产品组相关api 未完善

--- a/ApiServer/ApiServer.csproj
+++ b/ApiServer/ApiServer.csproj
@@ -36,6 +36,8 @@
     <Compile Remove="Migrations\20180619083924_LeonAddFolderToCollection10619.Designer.cs" />
     <Compile Remove="Migrations\20180619084156_LeonAddCollection0619.cs" />
     <Compile Remove="Migrations\20180619084156_LeonAddCollection0619.Designer.cs" />
+    <Compile Remove="Migrations\20180711071724_LeonAddProductReplaceGroup0711.cs" />
+    <Compile Remove="Migrations\20180711071724_LeonAddProductReplaceGroup0711.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
