--- a/ApiServer/Properties/launchSettings.json
+++ b/ApiServer/Properties/launchSettings.json
@@ -25,6 +25,15 @@
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "applicationUrl": "http://localhost:1882/"
+    },
+    "Staging": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "launchUrl": "",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      },
+      "applicationUrl": "http://localhost:1882/"
     }
   }
 }
