添加用户角色实体

--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -16,11 +16,11 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
+  //"ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
+  "ConnectionStrings": { "MainDb": "Server=47.104.88.188;Database=dmz;User Id=postgres;Password=AAaa123456" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
   "GuidMinLen": 8,
-  "MediaShareServer": "http://localhost/ApiShareServe",
-  "Demo": "1111"
+  "MediaShareServer": "http://localhost/ApiShareServe"
 }
