--- a/ApiServer/appsettings.Production.json
+++ b/ApiServer/appsettings.Production.json
@@ -16,10 +16,15 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb_tmp;User Id=postgres;Password=omega" },
-  "TokenKey": "apiserver secret key here",
+  "ConnectionStrings": { "MainDb": "Server=localhost;Port=15266;Database=dmz_test;User Id=postgres;Password=AAaa123456" },
   "ServerId": 1,
   "GuidSalt": "",
   "GuidMinLen": 8,
-  "MediaShareServer": "http://share.damaozhu.com.cn"
+  "MediaShareServer": "http://share.damaozhu.com.cn",
+  "JwtSettings": {
+    "Issuer": "decohero.net",
+    "Audience": "decohero.net",
+    "SecretKey": "damaozhu-anzhumeiju-app",
+    "ExpiresDay": 1
+  }
 }
