--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -16,8 +16,8 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Server=152.101.191.28;Port=15266;Database=dmz;User Id=postgres;Password=AAaa123456" },
-  //"ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
+  //"ConnectionStrings": { "MainDb": "Server=152.101.191.28;Port=15266;Database=dmz;User Id=postgres;Password=AAaa123456" },
+  "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
   //"ConnectionStrings": { "MainDb": "Server=47.104.88.188;Database=dmz;User Id=postgres;Password=AAaa123456" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
