--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -18,7 +18,7 @@
   },
   //"ConnectionStrings": { "MainDb": "Server=152.101.191.28;Port=15266;Database=dmz;User Id=postgres;Password=AAaa123456" },
   "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
-  //"ConnectionStrings": { "MainDb": "Server=47.104.88.188;Database=dmz;User Id=postgres;Password=AAaa123456" },
+  //"ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb_kenn;User Id=postgres;Password=omega"  },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
@@ -29,5 +29,13 @@
     "Audience": "decohero.net",
     "SecretKey": "damaozhu-anzhumeiju-app",
     "ExpiresDay": 1
+  },
+  "MessageMail": "info@damaozhu.com",
+  "SMTPSettings": {
+    "Account": "liwangp2012@163.com",
+    "Password": "wqj199139",
+    "Hosts": "smtp.163.com",
+    "Port": 25,
+    "NickName": "Leon Auto Account"
   }
 }
