--- a/ApiServer/appsettings.Production.json
+++ b/ApiServer/appsettings.Production.json
@@ -26,5 +26,13 @@
     "Audience": "decohero.net",
     "SecretKey": "damaozhu-anzhumeiju-app",
     "ExpiresDay": 1
+  },
+  "MessageMail": "info@damaozhu.com",
+  "SMTPSettings": {
+    "Account": "liwangp2012@163.com",
+    "Password": "wqj199139",
+    "Hosts": "smtp.163.com",
+    "Port": 25,
+    "NickName": "Leon Auto Account"
   }
 }
