--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -37,5 +37,8 @@
     "Hosts": "smtp.163.com",
     "Port": 25,
     "NickName": "Leon Auto Account"
+  },
+  "Plugins": {
+    "OrderViewer": "http://localhost:1882/order-viewer/index.html"
   }
 }
