--- a/ApiServer/Properties/launchSettings.json
+++ b/ApiServer/Properties/launchSettings.json
@@ -3,11 +3,19 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:1881/",
+      "applicationUrl": "http://localhost:1882/",
       "sslPort": 0
     }
   },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "Development": {
       "commandName": "Project",
       "launchBrowser": false,
@@ -15,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:1882/"
+      "applicationUrl": "http://192.168.1.176:1882/"
     },
     "Production": {
       "commandName": "Project",
@@ -32,6 +40,15 @@
       "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Staging"
+      },
+      "applicationUrl": "http://localhost:1882/"
+    },
+    "Old": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "launchUrl": "",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:1882/"
     }
