--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -17,8 +17,8 @@
     }
   },
   //"ConnectionStrings": { "MainDb": "Server=152.101.191.28;Port=15266;Database=dmz;User Id=postgres;Password=AAaa123456" },
-  //"ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
-  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb_tmp;User Id=postgres;Password=omega"  },
+  "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
+  //"ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhudb_tmp;User Id=postgres;Password=omega"  },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
