为路由控制器put/post模型添加字段

--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -17,9 +17,9 @@
     }
   },
   //"ConnectionStrings": { "MainDb": "Server=152.101.191.28;Port=15266;Database=dmz;User Id=postgres;Password=root" },
-  "ConnectionStrings": { "MainDb": "Server=47.104.88.188;Port=15266;Database=dmz;User Id=postgres;Password=root" },
-  //"ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
-  //"ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhu_tmp;User Id=postgres;Password=omega"  },
+  //"ConnectionStrings": { "MainDb": "Server=47.104.88.188;Port=15266;Database=dmz;User Id=postgres;Password=root" },
+  "ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz;User Id=postgres;Password=root" },
+  //"ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=damaozhu_merge;User Id=postgres;Password=omega"  },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
