基本完成用户附加角色编辑

--- a/ApiServer/ApiServer.csproj
+++ b/ApiServer/ApiServer.csproj
@@ -39,6 +39,7 @@
     <Compile Remove="Migrations\20181119080710_LeonAddOrganType20181119.cs" />
     <Compile Remove="Migrations\20181119084051_LeonAddOrganType20181119.cs" />
     <Compile Remove="Migrations\20181119084237_LeonAddOrganType20181119.cs" />
+    <Compile Remove="Migrations\20181121071218_LeonAddOrganType20181119.cs" />
     <Compile Remove="Services\AccountMan.cs" />
   </ItemGroup>
 
