正在编写数据库初始化设置

--- a/apps-basic/Apps.Basic.Service/Apps.Basic.Service.csproj
+++ b/apps-basic/Apps.Basic.Service/Apps.Basic.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\Navigation\NavigationController.cs" />
+    <Compile Remove="Migrations\20181129094032_InitDb.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
