--- a/apps-basic/Apps.Basic.Service/appsettings.Development.json
+++ b/apps-basic/Apps.Basic.Service/appsettings.Development.json
@@ -6,11 +6,16 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": "Server=localhost;Database=app-basic;User Id=postgres;Password=root",
+  "ConnectionString": "Server=localhost;Database=dmz_rfc;User Id=postgres;Password=root",
   "JwtSettings": {
     "Issuer": "decohero.net",
     "Audience": "decohero.net",
     "SecretKey": "damaozhu-anzhumeiju-app",
     "ExpiresDay": 1
+  },
+  "GuidSettings": {
+    "ServerId": 1,
+    "GuidSalt": "",
+    "GuidMinLen": 8
   }
 }
