--- a/apps-basic/Apps.Basic.Data/Apps.Basic.Data.csproj
+++ b/apps-basic/Apps.Basic.Data/Apps.Basic.Data.csproj
@@ -6,8 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Enums\" />
-    <Folder Include="Consts\" />
+    <Compile Remove="Consts\**" />
+    <Compile Remove="Enums\**" />
+    <EmbeddedResource Remove="Consts\**" />
+    <EmbeddedResource Remove="Enums\**" />
+    <None Remove="Consts\**" />
+    <None Remove="Enums\**" />
   </ItemGroup>
 
   <ItemGroup>
