--- a/ApiServer/Properties/launchSettings.json
+++ b/ApiServer/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:1882/"
+      "applicationUrl": "http://192.168.1.176:1882/"
     },
     "Production": {
       "commandName": "Project",
