--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -19,7 +19,8 @@
   //"ConnectionStrings": { "MainDb": "Server=152.101.191.28;Port=15266;Database=dmz_test;User Id=postgres;Password=root" },
   //"ConnectionStrings": { "MainDb": "Server=47.104.88.188;Port=15266;Database=dmz_dev;User Id=postgres;Password=root" },
   //"ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz_dev;User Id=postgres;Password=root" },
-  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=dmz;User Id=postgres;Password=omega" },
+  //"ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=dmz;User Id=postgres;Password=omega" },
+  "ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=dmz_ehome;User Id=postgres;Password=omega" },
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
