修改docker-compose 配置

--- a/ApiServer/appsettings.Production.json
+++ b/ApiServer/appsettings.Production.json
@@ -16,15 +16,15 @@
       }
     }
   },
-  "ConnectionStrings": { "MainDb": "Server=localhost;Port=15266;Database=dmz_test;User Id=postgres;Password=AAaa123456" },
+  "ConnectionString": "Server=192.168.1.6;Port=5433;Database=dmz_ehome;User Id=postgres;Password=omega",
   "ServerId": 1,
   "GuidSalt": "",
   "GuidMinLen": 8,
   "MediaShareServer": "http://share.damaozhu.com.cn",
   "JwtSettings": {
-    "Issuer": "decohero.net",
-    "Audience": "decohero.net",
-    "SecretKey": "damaozhu-anzhumeiju-app",
+    "Issuer": "ehome.damaozhu.com.cn",
+    "Audience": "ehome.damaozhu.com.cn",
+    "SecretKey": "damaozhu-anzhumeiju-app-ehome",
     "ExpiresDay": 1
   },
   "MessageMail": "info@damaozhu.com",
