实现会员用户基础数据采集功能,但是尚未建立会员层级关系

--- a/ApiServer/appsettings.Development.json
+++ b/ApiServer/appsettings.Development.json
@@ -21,7 +21,8 @@
   //"ConnectionStrings": { "MainDb": "Server=localhost;Database=dmz_dev;User Id=postgres;Password=root" },
   //"ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=dmz;User Id=postgres;Password=omega" },
   //"ConnectionStrings": { "MainDb": "Server=192.168.1.6;Port=5433;Database=dmz_ehome;User Id=postgres;Password=omega" },
-  "ConnectionString": "Server=192.168.1.6;Port=5433;Database=dmz_ehome;User Id=postgres;Password=omega",
+  "ConnectionString": "Server=localhost;Database=dmz_rfc;User Id=postgres;Password=root",
+  //"ConnectionString": "Server=192.168.1.6;Port=5433;Database=dmz_ehome;User Id=postgres;Password=omega",
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
   "GuidSalt": "",
