成功配置apigateway和docker-compose

--- a/apps-common/Apps.Base.APIGateway/Dockerfile
+++ b/apps-common/Apps.Base.APIGateway/Dockerfile
@@ -4,14 +4,14 @@ EXPOSE 80
 
 FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
-COPY ["apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj", "apps-common/Apps.Base.APIGateway/"]
-RUN dotnet restore "apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj"
+COPY apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj apps-common/Apps.Base.APIGateway/
+RUN dotnet restore apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj
 COPY . .
-WORKDIR "/src/apps-common/Apps.Base.APIGateway"
-RUN dotnet build "Apps.Base.APIGateway.csproj" -c Release -o /app
+WORKDIR /src/apps-common/Apps.Base.APIGateway
+RUN dotnet build Apps.Base.APIGateway.csproj -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "Apps.Base.APIGateway.csproj" -c Release -o /app
+RUN dotnet publish Apps.Base.APIGateway.csproj -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
