测试api gateway,添加资源文件转移控制器及其功能

--- a/Apps.MoreJee.Service/Dockerfile
+++ b/Apps.MoreJee.Service/Dockerfile
@@ -4,14 +4,14 @@ EXPOSE 80
 
 FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
-COPY ["Apps.MoreJee.Service/Apps.MoreJee.Service.csproj", "Apps.MoreJee.Service/"]
-RUN dotnet restore "Apps.MoreJee.Service/Apps.MoreJee.Service.csproj"
+COPY Apps.MoreJee.Service/Apps.MoreJee.Service.csproj Apps.MoreJee.Service/
+RUN dotnet restore Apps.MoreJee.Service/Apps.MoreJee.Service.csproj
 COPY . .
-WORKDIR "/src/Apps.MoreJee.Service"
-RUN dotnet build "Apps.MoreJee.Service.csproj" -c Release -o /app
+WORKDIR /src/Apps.MoreJee.Service
+RUN dotnet build Apps.MoreJee.Service.csproj -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "Apps.MoreJee.Service.csproj" -c Release -o /app
+RUN dotnet publish Apps.MoreJee.Service.csproj -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
