--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,20 @@ services:
       dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
     ports:
       - "1881:80"
+
+  apps.basic.service:
+    image: ${DOCKER_REGISTRY}appsbasicservice
+    build:
+      context: .
+      dockerfile: apps-basic/Apps.Basic.Service/Dockerfile
+    ports:
+      - "1882:80"
+
+  apps.morejee.service:
+    image: ${DOCKER_REGISTRY}appsmorejeeservice
+    build:
+      context: .
+      dockerfile: Apps.MoreJee.Service/Dockerfile
+    ports:
+      - "1883:80"
+
