--- a/apps-basic/Apps.Basic.Service/Properties/launchSettings.json
+++ b/apps-basic/Apps.Basic.Service/Properties/launchSettings.json
@@ -21,7 +21,7 @@
         "APP_DATABASE_CONNECTIONSTRING": "kaix",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:1882"
+      "applicationUrl": "http://192.168.1.176:1882"
     }
   }
 }
