--- a/apps-basic/Apps.Basic.Service/Apps.Basic.Service.csproj
+++ b/apps-basic/Apps.Basic.Service/Apps.Basic.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\FileRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
