配置app postgres docker数据库

--- a/apps-basic/Apps.Basic.Service/appsettings.Development.json
+++ b/apps-basic/Apps.Basic.Service/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": "Server=localhost;Database=dmz_basic;User Id=postgres;Password=root",
+  "ConnectionString": "Server=localhost;Port=5432;Database=dmz_basic;User Id=postgres;Password=root",
   "JwtSettings": {
     "Issuer": "decohero.net",
     "Audience": "decohero.net",
