--- a/apps-filesystem/Apps.FileSystem.Service/appsettings.Development.json
+++ b/apps-filesystem/Apps.FileSystem.Service/appsettings.Development.json
@@ -5,5 +5,17 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionString": "Server=192.168.99.100;Port=15266;Database=dmz_filesystem;User Id=postgres;Password=root",
+  "JwtSettings": {
+    "Issuer": "decohero.net",
+    "Audience": "decohero.net",
+    "SecretKey": "damaozhu-anzhumeiju-app",
+    "ExpiresDay": 1
+  },
+  "GuidSettings": {
+    "ServerId": 1,
+    "GuidSalt": "",
+    "GuidMinLen": 8
   }
 }
