--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: '3.4'
 
 services:
 
-  apps.mongodb:
-    image: appsmongodb
-    build:
-      context: .
-      dockerfile: apps-foundation/Apps_MongoDB/Dockerfile
-    ports:
-      - "27017:27017"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: root
-    networks: 
-      - dmz-morejee-net
+  # apps.mongodb:
+  #   image: appsmongodb
+  #   build:
+  #     context: .
+  #     dockerfile: apps-foundation/Apps_MongoDB/Dockerfile
+  #   ports:
+  #     - "27017:27017"
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: root
+  #   networks: 
+  #     - dmz-morejee-net
 
   apps.postgresdb:
     image: appspostgresdb
@@ -30,19 +30,19 @@ services:
     networks: 
       - dmz-morejee-net
 
-  # apps.base.apigateway:
-  #   image: appsbaseapigateway
-  #   build:
-  #     context: .
-  #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
-  #   ports:
-  #     - "1881:80"
-  #   volumes:
-  #     - "/var/bamboo/appsbaseapigateway/logs:/app/logs"
-  #   networks:
-  #     - dmz-morejee-net
-  #   depends_on:
-  #     - apps.basic.service
+  apps.base.apigateway:
+    image: appsbaseapigateway
+    build:
+      context: .
+      dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
+    ports:
+      - "1881:80"
+    volumes:
+      - "/var/bamboo/appsbaseapigateway/logs:/app/logs"
+    networks:
+      - dmz-morejee-net
+    depends_on:
+      - apps.basic.service
   #     - apps.mongodb
 
   apps.basic.service:
